add more changes for warehouse monitoring